# HandHeld

./: .gitignore
doc/: План.txt  Энергосбережение.txt
sources/: CMakeLists.txt  HandHeld.uvmpw  HandHeld.uvmpw.uvgui.Sasha
sources/Device/: CMakeLists.txt  Device.uvguix.Sasha  Device.uvoptx  Device.uvprojx
sources/Device/Device1602/: CMakeLists.txt  Device1602.uvguix.Sasha  Device1602.uvoptx  Device1602.uvprojx
sources/Device/Device2/: CMakeLists.txt  Device2.uvguix.Sasha  Device2.uvoptx  Device2.uvprojx
sources/Device/Listings/: Project.map  startup_gd32e23x.lst
sources/Device/Objects/: Device_Release.dep  Project.axf  Project.build_log.htm  Project.htm  Project.lnp  beeper.d  cmt2210aw.d  colors.d  device.d  display.d  emulator_receiver.d  font.d  fps.d  gd32e23x_adc.d  gd32e23x_cmp.d  gd32e23x_crc.d  gd32e23x_dbg.d  gd32e23x_dma.d  gd32e23x_exti.d  gd32e23x_fmc.d  gd32e23x_fwdgt.d  gd32e23x_gpio.d  gd32e23x_i2c.d  gd32e23x_it.d  gd32e23x_misc.d  gd32e23x_pmu.d  gd32e23x_rcu.d  gd32e23x_rtc.d  gd32e23x_spi.d  gd32e23x_syscfg.d  gd32e23x_timer.d  gd32e23x_usart.d  gd32e23x_wwdgt.d  hal.d  hal_i2c.d  hal_pins.d  keyboard.d  main.d  math.d  melody1.d  (+24 more)
sources/Device/src/: Device.cpp  Device.h  defines.h  opt.h
sources/Device/src/Display/: Colors.cpp  Colors.h  Display.cpp  Display.h  Display1602.cpp  Display1602.h  Display7735.cpp  Text.h
sources/Device/src/Display/Font/: Font.cpp  Font.h
sources/Device/src/Hardware/: Battery.cpp  Battery.h  Beeper.cpp  Beeper.h  Clock.cpp  Clock.h  LED.cpp  LED.h  Power.cpp  Power.h  Timer.cpp  Timer.h  Vibrato.cpp  Vibrato.h  Watch.cpp  Watch.h
sources/Device/src/Hardware/CMSIS/: system_gd32e23x.c
sources/Device/src/Hardware/HAL/: HAL.cpp  HAL.h  HAL_ADC.cpp  HAL_CLOCK.cpp  HAL_I2C.cpp  HAL_PINS.cpp  HAL_PINS.h  HAL_TIM2.cpp  HAL_TIM5.cpp  gd32e23x_it.c  gd32e23x_it.cpp  gd32e23x_it.h
sources/Device/src/Keyboard/: Keyboard.cpp  Keyboard.h
sources/Device/src/Menu/: Menu.cpp  Menu.h  Menu.txt  MenuItemDef.h  MenuItems.cpp  MenuItems.h
sources/Device/src/Menu/Pages/: PageAlarm.cpp  PageCalls.cpp  PageDate.cpp  PageDoorBell.cpp  PageHistory.cpp  PageHomePhone.cpp  PageIntercom.cpp  PageJournal.cpp  PageMain.cpp  PageMicrophone.cpp  PageMobile.cpp  PageTime.cpp  PageWatch.cpp  Pages.cpp  Pages.h
sources/Device/src/Menu/Pages/PageCalls/: PageCalls.cpp  PageDoorBell.cpp  PageHomePhone.cpp  PageIntercom.cpp  PageMobile.cpp  PageSoundSensor.cpp
sources/Device/src/Modules/Beeper/: Beeper.cpp  Beeper.h  driverBeeper.cpp  driverBeeper.h
sources/Device/src/Modules/Beeper/Sounds/: sound1.h  sound10.h  sound2.h  sound3.h  sound4.h  sound5.h  sound6.h  sound7.h  sound8.h  sound9.h
sources/Device/src/Modules/CMT2210AW/: CMT2210AW.cpp  CMT2210AW.h  EmulatorReceiver.cpp  EmulatorReceiver.h
sources/Device/src/Modules/ColorLED/: ColorLED.cpp  ColorLED.h
sources/Device/src/Modules/LED/: LED.cpp  driverLED_1602.cpp
sources/Device/src/Modules/PCF8563/: PCF8563.cpp  PCF8563.h  PCF8563_gd.cpp  driver_PCF8563.cpp  driver_PCF8563.h
sources/Device/src/Modules/ST7735/: ST7735.cpp  ST7735.h
sources/Device/src/Modules/ST7755/: ST7755.cpp  ST7755.h
sources/Device/src/Modules/WH1602B/: WH1602B.cpp  WH1602B.h
sources/Device/src/Player/: Beeper.cpp  Beeper.h  Player.cpp  Player.h  driverPlayer.cpp  driverPlayer.h  hxMidiPlayer.cpp  hxMidiPlayer.h  melody.cpp  melody2.cpp  melody3.cpp
sources/Device/src/Player/Melodies/: melody1.cpp  melody1.h  melody10.cpp  melody10.h  melody2.cpp  melody2.h  melody3.cpp  melody3.h  melody4.cpp  melody4.h  melody5.cpp  melody5.h  melody6.cpp  melody6.h  melody7.cpp  melody7.h  melody8.cpp  melody8.h  melody9.cpp  melody9.h
sources/Device/src/Player/Sounds/: sound1.h
sources/Device/src/PlayerMIDI/: BeeperMIDI.cpp  PlayerMIDI.cpp  PlayerMIDI.h
sources/Device/src/PlayerMIDI/Melodies/: melody1.cpp  melody1.h  melody10.cpp  melody10.h  melody2.cpp  melody2.h  melody3.cpp  melody3.h  melody4.cpp  melody4.h  melody5.cpp  melody5.h  melody6.cpp  melody6.h  melody7.cpp  melody7.h  melody8.cpp  melody8.h  melody9.cpp  melody9.h
sources/Device/src/Settings/: QueueSource.cpp  QueueSource.h  Settings.cpp  Settings.h  Source.cpp  Source.h
sources/Device/src/Storage/: Storage.cpp  Storage.h
sources/Device/src/Utils/: FPS.cpp  Math.cpp  Math.h  Queue.cpp  Queue.h
sources/Energy/: CMakeLists.txt  Energy.uvguix.Sasha  Energy.uvoptx  Energy.uvprojx
sources/Energy/src/: Device.cpp  defines.h  main.cpp
sources/Energy/src/Hardware/: Power.cpp  Power.h  Vibrato.h
sources/Energy/src/Hardware/CMSIS/: system_gd32e23x.c
sources/Energy/src/Hardware/HAL/: HAL.cpp  gd32e23x_it.cpp  gd32e23x_it.h
sources/Energy/src/Keyboard/: Keyboard.cpp  Keyboard.h
sources/Energy/src/Menu/Pages/: PageJournal.cpp
sources/Energy/src/Modules/CMT2210AW/: CMT2210AW.cpp  CMT2210AW.h
sources/Energy/src/Modules/LED/: LED.cpp
sources/Energy/src/Modules/PCF8563/: PCF8563.cpp
sources/Energy/src/Modules/ST7735/: ST7735.cpp  ST7735.h
sources/Energy/src/Settings/: Settings.h
sources/Energy/src/Storage/: Storage.cpp
sources/VS/Device/: CMakeLists.txt  Frame.cpp  Frame.h  defines_win.h  gd32e23x.cpp  gd32e23x.h  main_win.cpp
sources/VS/Device/GUI/: Application.cpp  Frame.cpp  Frame.h
sources/VS/Device/GUI/Controls/: Painter.cpp  Painter.h  PainterLED.cpp  PainterLED.h  PainterMelody.cpp  PainterMelody.h  PainterVibrator.cpp  PainterVibrator.h  Screen.cpp  Screen.h
sources/VS/Device/GUI/Dialogs/: TransmitterDialog.cpp  TransmitterDialog.h
sources/VS/Device/Hardware/: Beeper_win.cpp  LED_win.cpp  Timer_win.cpp  Vibrato_win.cpp
sources/VS/Device/Hardware/HAL/: HAL_ADC_win.cpp  HAL_PINS_win.cpp  HAL_ROM_win.cpp  HAL_TIM2_win.cpp  HAL_win.cpp
sources/VS/Device/Keyboard/: Keyboard_win.cpp
sources/VS/Device/Modules/Beeper/: Beeper_win.cpp  driverBeeper_win.cpp
sources/VS/Device/Modules/CMT2210AW/: EmulatorReceiver.cpp  EmulatorReceiver.h
sources/VS/Device/Modules/LED/: LED_win.cpp  driverLED_win.cpp
sources/VS/Device/Modules/PCF8563/: PCF8563_win.cpp
sources/VS/Device/Player/: Beeper_win.cpp
(+533 files in other folders)
