# (c) Aleksandr Shevchenko e-mail : Sasha7b9@tut.by

project (Energy)

#set(CMAKE_UNITY_BUILD OFF)

message("------------------------------------------------------------------------ ${PROJECT_NAME}")

include_directories(
    ../common/VS_KEIL
    src/Hardware/HAL
    src
    ../common/GD32E23x_Firmware_Library/Firmware/CMSIS/GD/GD32E23x/Include
    ../common/GD32E23x_Firmware_Library/Firmware/GD32E23x_standard_peripheral/Include
)

add_definitions(-DGD32E230 -DTYPE_BOARD_799)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -MP -Wall")

add_compile_options(
    /wd4310
    /wd4514
    /wd4623
    /wd4626
    /wd4710
    /wd4820    # 'xxx': '4' bytes padding added after data member 'yyy'
    /wd4996
    /wd5027
    /wd5045
    /wd5204
)

file(GLOB GD32E23x                ../common/GD32E23x_Firmware_Library/Firmware/GD32E23x_standard_peripheral/Include/*.*
                                  ../common/GD32E23x_Firmware_Library/Firmware/GD32E23x_standard_peripheral/Source/*.*)
file(GLOB SRC                     src/*.*)
file(GLOB HARDWARE                src/Hardware/*.*)
file(GLOB HARDWARE_CMSIS          src/Hardware/CMSIS/*.*)
file(GLOB HARDWARE_HAL            src/Hardware/HAL/*.*)
file(GLOB KEYBOARD                src/Keyboard/*.*)

source_group(GD32E23x               FILES ${GD32E23x})
source_group(src                    FILES ${SRC})
source_group(Hardware               FILES ${HARDWARE})
source_group(Hardware/CMSIS         FILES ${HARDWARE_CMSIS})
source_group(Hardware/HAL           FILES ${HARDWARE_HAL})
source_group(Keyboard               FILES ${KEYBOARD})

set_source_files_properties(
    ${GD32E23x}
    ${HARDWARE_CMSIS}
    src/Hardware/Watch.cpp
    PROPERTIES HEADER_FILE_ONLY TRUE
)

add_library(${PROJECT_NAME}
    ${GD32E23x}
    ${SRC}
    ${HARDWARE}
    ${HARDWARE_CMSIS}
    ${HARDWARE_HAL}
    ${KEYBOARD}
)
